--- a/Schoenemann/Makefile
+++ b/Schoenemann/Makefile
@@ -11,6 +11,6 @@ ifeq ($(OS),Windows_NT)
 endif
 
 all:
-	cd ../Schoenemann && g++ -Wall -std=c++20 -O3 schoenemann.cpp search.cpp main.cpp timeman.cpp helper.cpp tt.cpp moveorder.cpp see.cpp -o $(EXE).exe
+	cd ../Schoenemann && g++ -Wall -std=c++20 -O3 schoenemann.cpp search.cpp main.cpp timeman.cpp helper.cpp tt.cpp moveorder.cpp see.cpp -o $(EXE)
 test:
-	cd ../Schoenemann && g++ -Wall -std=c++20 -O0 schoenemann.cpp search.cpp main.cpp timeman.cpp helper.cpp tt.cpp moveorder.cpp see.cpp -o $(EXE).exe
+	cd ../Schoenemann && g++ -Wall -std=c++20 -O0 schoenemann.cpp search.cpp main.cpp timeman.cpp helper.cpp tt.cpp moveorder.cpp see.cpp -o $(EXE)
