--- a/Schoenemann/Makefile
+++ b/Schoenemann/Makefile
@@ -13,4 +13,4 @@ endif
 all:
 	cd ../Schoenemann && g++ -Wall -std=c++20 -O3 schoenemann.cpp search.cpp main.cpp timeman.cpp helper.cpp tt.cpp moveorder.cpp see.cpp -o $(EXE)
 test:
-	cd ../Schoenemann && g++ -Wall -std=c++20 -O0 schoenemann.cpp search.cpp main.cpp timeman.cpp helper.cpp tt.cpp moveorder.cpp see.cpp -o $(EXE)
+	cd ../Schoenemann && clang++ -Wall -std=c++20 -fsanitize=address -g3 schoenemann.cpp search.cpp main.cpp timeman.cpp helper.cpp tt.cpp moveorder.cpp see.cpp -o $(EXE)
