Fix OpenBench building (#129)
Bench 5438824

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,20 +1,23 @@
-EXE := null
-CC := clang++
-EVALFILE := quantised.bin
- 
+CXX = clang++
+
+EXE = null
+
+FLAGS = -Wall -Wextra -Wpedantic -Wshadow -pedantic
+
+EVALFILE = quantised.bin
 
 # Append .exe to the binary name on Windows
-
 ifeq ($(OS),Windows_NT)
-
-    override EXE := $(EXE).exe
-
+	EXE := $(EXE).exe
 endif
 
+SOURCES = schoenemann.cpp search.cpp timeman.cpp helper.cpp tt.cpp moveorder.cpp see.cpp tune.cpp datagen.cpp
+
 all:
-	$(CC) -Wall -Wextra -Wpedantic -Wshadow -std=c++20 -march=native -O3 -funroll-loops -DEVALFILE=\"$(EVALFILE)\" schoenemann.cpp search.cpp timeman.cpp helper.cpp tt.cpp moveorder.cpp see.cpp tune.cpp datagen.cpp -o $(EXE)
+	$(CXX) $(FLAGS) -pthread -std=c++20 -march=native -O3 -funroll-loops -DEVALFILE=\"$(EVALFILE)\" $(SOURCES) -o $(EXE)
+
 test:
-# Possible santizier: address, undefined, leak, thread, memory
-	$(CC) -Wall -Wextra -Wpedantic -Wshadow -std=c++20 -fsanitize=address -g3 -DEVALFILE=\"$(EVALFILE)\" schoenemann.cpp search.cpp timeman.cpp helper.cpp tt.cpp moveorder.cpp see.cpp tune.cpp datagen.cpp -o $(EXE)
+	$(CXX) $(FLAGS) -pthread -std=c++20 -fsanitize=address -g3 -DEVALFILE=\"$(EVALFILE)\" $(SOURCES) -o $(EXE)
+
 release:
-	$(CC) -Wall -std=c++20 -O3 -funroll-loops -DEVALFILE=\"$(EVALFILE)\" schoenemann.cpp search.cpp timeman.cpp helper.cpp tt.cpp moveorder.cpp see.cpp tune.cppdatagen.cpp -o Schoenemann
+	$(CXX) $(FLAGS) -pthread -std=c++20 -O3 -funroll-loops -DEVALFILE=\"$(EVALFILE)\" $(SOURCES) -o $(EXE)
