--- a/src/Makefile
+++ b/src/Makefile
@@ -2,7 +2,7 @@ CXX = clang++
 
 EXE = null
 
-FLAGS = -Wall -Wextra -Wpedantic -Wshadow -pedantic
+FLAGS = -Wall -Wextra -Wpedantic -Wshadow -pedantic -pthread -std=c++20
 
 EVALFILE = quantised.bin
 
@@ -14,10 +14,10 @@ endif
 SOURCES = schoenemann.cpp search.cpp timeman.cpp helper.cpp tt.cpp moveorder.cpp see.cpp tune.cpp datagen.cpp
 
 all:
-	$(CXX) $(FLAGS) -pthread -std=c++20 -march=native -O3 -funroll-loops -DEVALFILE=\"$(EVALFILE)\" $(SOURCES) -o $(EXE)
+	$(CXX) $(FLAGS) -march=native -O3 -funroll-loops -DEVALFILE=\"$(EVALFILE)\" $(SOURCES) -o $(EXE)
 
 test:
-	$(CXX) $(FLAGS) -pthread -std=c++20 -fsanitize=address -g3 -DEVALFILE=\"$(EVALFILE)\" $(SOURCES) -o $(EXE)
+	$(CXX) $(FLAGS) -fsanitize=address -g3 -DEVALFILE=\"$(EVALFILE)\" $(SOURCES) -o $(EXE)
 
 release:
-	$(CXX) $(FLAGS) -pthread -std=c++20 -O3 -funroll-loops -DEVALFILE=\"$(EVALFILE)\" $(SOURCES) -o $(EXE)
+	$(CXX) $(FLAGS) -O3 -funroll-loops -DEVALFILE=\"$(EVALFILE)\" $(SOURCES) -o $(EXE)
