--- a/.github/workflows/test-undefined.yml
+++ b/.github/workflows/test-undefined.yml
@@ -21,16 +21,15 @@ jobs:
         run: |
           if [[ "$RUNNER_OS" == "Linux" ]]; then
             sudo apt-get update
-            sudo apt-get install -y --no-install-recommends clang++-18 make wget gnupg lsb-release
+            sudo apt-get install -y --no-install-recommends \
+              clang++-18 make wget gnupg lsb-release
             wget https://apt.llvm.org/llvm.sh
-            chmod +x llvm.sh
-            sudo ./llvm.sh 18
+            chmod +x llvm.sh && sudo ./llvm.sh 18
             sudo ln -sf /usr/bin/clang++-18 /usr/bin/clang++
           else
-            choco install llvm -y
-            choco install make -y
+            choco install llvm make -y
             # Ensure LLVM bin is on PATH
-            export PATH="/c/Program Files/LLVM/bin:$PATH"
+            echo "PATH=\"/c/Program Files/LLVM/bin:\$PATH\"" >> $GITHUB_ENV
           fi
 
       - name: Build with make all
@@ -39,58 +38,45 @@ jobs:
           cd src
           make all
 
-      - name: List built files
-        shell: bash
-        run: |
-          cd src
-          echo "----- files in src/ -----"
-          ls -l
-
-      - name: Check for Bench number in commit message
+      - name: Check for bench number in commit message
         id: bench-check
         shell: bash
         run: |
           COMMIT_MSG=$(git log -1 --pretty=%B)
-          echo "Commit message: $COMMIT_MSG"
           if [[ $COMMIT_MSG =~ Bench[[:space:]]+([0-9]+) ]]; then
-            BENCH_NUM="${BASH_REMATCH[1]}"
-            echo "Found bench number: $BENCH_NUM"
-            echo "BENCH_NUM=$BENCH_NUM" >> $GITHUB_ENV
-          else
-            echo "No bench number found in commit message"
+            echo "BENCH_NUM=${BASH_REMATCH[1]}" >> $GITHUB_ENV
           fi
 
-      - name: Run benchmark test
-        if: env.BENCH_NUM
+      # Linux benchmark
+      - name: Run benchmark on Linux
+        if: matrix.os == 'ubuntu-22.04' && env.BENCH_NUM
         shell: bash
         run: |
           cd src
-
-          # Pick correct binary name per OS
-          if [[ "$RUNNER_OS" == "Windows" ]]; then
-            [[ -f null.exe ]] || { echo "::error::null.exe not found in src/"; exit 1; }
-            BINARY=./null.exe
-          else
-            [[ -f null ]] || { echo "::error::null not found in src/"; exit 1; }
-            BINARY=./null
-          fi
-
-          echo "Running benchmark with $BINARY"
-          OUTPUT=$($BINARY bench)
-          echo "Bench output: $OUTPUT"
-
-          # Extract nodes count
+          [[ -f null ]] \
+            || { echo "::error::null not found"; exit 1; }
+          OUTPUT=$(./null bench)
           if [[ $OUTPUT =~ Nodes[[:space:]]*:[[:space:]]*([0-9]+) ]]; then
-            OUTPUT_NODES="${BASH_REMATCH[1]}"
+            [[ "${BASH_REMATCH[1]}" -eq "$BENCH_NUM" ]] \
+              || { echo "::error::Mismatch: expected $BENCH_NUM, got ${BASH_REMATCH[1]}"; exit 1; }
           else
-            echo "::error::Failed to extract nodes number from output"
-            exit 1
+            echo "::error::Failed to parse nodes"; exit 1
           fi
 
-          echo "Expected bench number: ${{ env.BENCH_NUM }}"
-          echo "Reported nodes: $OUTPUT_NODES"
-
-          if [ "$OUTPUT_NODES" -ne "${{ env.BENCH_NUM }}" ]; then
-            echo "::error::Bench number mismatch: expected ${{ env.BENCH_NUM }}, got $OUTPUT_NODES"
-            exit 1
-          fi
+      # Windows benchmark (use PowerShell for PE binary)
+      - name: Run benchmark on Windows
+        if: matrix.os == 'windows-latest' && env.BENCH_NUM
+        shell: pwsh
+        run: |
+          Set-Location src
+          if (-not (Test-Path .\null.exe)) {
+            Write-Error "null.exe not found"; exit 1
+          }
+          $output = & .\null.exe bench
+          if ($output -notmatch 'Nodes\s*:\s*(\d+)') {
+            Write-Error "Failed to parse nodes"; exit 1
+          }
+          $nodes = $Matches[1]
+          if ($nodes -ne $Env:BENCH_NUM) {
+            Write-Error "Mismatch: expected $Env:BENCH_NUM, got $nodes"; exit 1
+          }
