--- a/src/Makefile
+++ b/src/Makefile
@@ -17,8 +17,8 @@ all:
 	$(CXX) $(FLAGS) -march=native -O3 -funroll-loops -DEVALFILE=\"$(EVALFILE)\" $(SOURCES) -o $(EXE)
 
 test:
-# Possible santizier: address, undefined, leak, thread, memory
-	$(CXX) $(FLAGS) -fsanitize=leak -g3 -fno-omit-frame-pointer -DEVALFILE=\"$(EVALFILE)\" $(SOURCES) -o $(EXE)
+# Possible santizier: address, undefined, leak, thread, (memory does not work probably)
+	$(CXX) $(FLAGS) -fsanitize=address,undefined,leak -g3 -fno-omit-frame-pointer -DEVALFILE=\"$(EVALFILE)\" $(SOURCES) -o $(EXE)
 
 release:
 	$(CXX) $(FLAGS) -O3 -funroll-loops -DEVALFILE=\"$(EVALFILE)\" $(SOURCES) -o $(EXE)
